[tool.poetry]
name = "algorithm-advanced"
version = "0.1.0"
description = ""
authors = ["n4okins <naoki.jsdf.jj@gmail.com>"]
readme = "README.md"
packages = [{include = "algorithm_advanced"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
scipy = "^1.9.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
pillow = "^9.3.0"
opencv-python = "^4.7.0.68"
jupyter = "^1.0.0"
jax = "^0.4.1"
jaxlib = "^0.4.1"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"